lesson6/env-vs-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-vs-volume-pod
spec:
  containers:
  - name: app
    image: busybox
    command:
    - sh
    - -c
    - |
      while true; do
        echo "ENV: $MESSAGE_ENV"
        echo "FILE: $(cat /config/message)"
        echo "---"
        sleep 10
      done
    volumeMounts:
    - name: config
      mountPath: /config
  
  volumes:
  - name: config
    configMap:
      name: test-config
