lesson6/pod-with-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: app
    image: busybox
    command:
    - sh
    - -c
    - |
      echo "USERNAME: $DB_USER"
      echo "PASSWORD: $DB_PASS"
      echo "Database: $DB_NAME"
      sleep 3600
