lesson6/pod-with-secret-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-volume-pod
spec:
  containers:
  - name: app
    image: busybox
    command:
    - sh
    - -c
    - |
      echo "=== Secret Files ==="
      ls -la /etc/secrets/
      echo ""
      echo "USERNAME: $(cat /etc/secrets/username)"
      echo "PASSWORD: $(cat /etc/secrets/password)"
      sleep 3600
    
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secrets/
      readOnly: true # Best practise for secrets
  

  volumes:
  - name: secret-volume
    secret:
      secretName: db-secret
