lesson6/pod-with-subpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-subpath
spec:
  containers:
  - name: nginx
    image: nginx:1.26
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config
      mountPath: /etc/nginx/conf.d/default.conf
      subPath: default.conf      # Mount only this file
  volumes:
  - name: config
    configMap:
      name: nginx-config
